--- a/probing.ipynb
+++ b/probing.ipynb
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
     "            breakpoint()\n",
     "            loss = loss_fn(y_pred, y)\n",
     "            epoch_loss += loss.item()\n",
-    "            metrics.fill_metrics(y_pred, y, loss.item())\n",
+    "            metrics.fill_metrics(y_pred, y)\n",
     "        print(f\"Epoch {epoch}, validation loss: {epoch_loss}\")\n",
     "        computed_metrics = metrics.compute_and_log_metrics(epoch_loss)\n",
     "        logger(writer, computed_metrics, 'val', epoch)\n",
@@ -482,7 +482,7 @@
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "        metrics.fill_metrics(y_pred, y, loss.item())\n",
+    "        metrics.fill_metrics(y_pred, y)\n",
     "    print(f\"Epoch {epoch}, training loss: {epoch_loss}\")\n",
     "    computed_metrics = metrics.compute_and_log_metrics(epoch_loss)\n",
     "    logger(writer, computed_metrics, 'train', epoch)\n",
