--- a/probing.ipynb
+++ b/probing.ipynb
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -278,12 +278,12 @@
     }
    ],
    "source": [
-    "from gpt import SentimentDataset\n",
-    "from linear_probe import LinearProbe\n",
+    "from datasets.gpt import SentimentDataset\n",
+    "from models.linear_probe import LinearProbe\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader, random_split\n",
-    "from metrics import MulticlassMetrics\n",
+    "from metrics.metrics import MulticlassMetrics\n",
     "import torch.optim as optim\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
     "from tqdm import tqdm\n",
@@ -333,13 +333,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "metrics = MulticlassMetrics(device=device, num_classes=3)\n",
     "\n",
-    "writer = SummaryWriter(log_dir=f\"/content/logs\")\n",
+    "writer = SummaryWriter(log_dir=f\"/content/Emojiville/logs\")\n",
     "\n",
     "#Logger for tensorboard\n",
     "def logger(writer, metrics, phase, epoch_index):\n",
@@ -348,20 +348,16 @@
     "        # if key == 'confusion':\n",
     "        #     fig = plot_confusion_matrix(metrics[key])\n",
     "        #     writer.add_figure(f\"Confusion Matrix {phase}\", fig, epoch_index)\n",
-    "        # else:\n",
-    "        ## check for 2 class multiclass\n",
     "        if type(value)!= float and len(value.shape) > 0 and value.shape[0] == 2:\n",
     "            value = value[1]\n",
     "        elif type(value)!= float and len(value.shape) > 0 and value.shape[0] > 2:\n",
     "            #average \n",
     "            value = torch.nanmean(value)\n",
     "            # breakpoint()\n",
-    "\n",
-    "            # raise Exception(\"Need to handle multiclass\")\n",
-    "            # bp()\n",
     "        writer.add_scalar(\"%s/%s\"%(phase, key), value, epoch_index)\n",
     "    writer.flush()\n",
-    "\n"
+    "\n",
+    "%tensorboard --logdir /content/Emojiville/logs\n"
    ]
   },
   {
