--- a/probing.ipynb
+++ b/probing.ipynb
@@ -459,7 +459,7 @@
     "            x, y = x.to(device), y.to(device)\n",
     "            y_pred = model(x)\n",
     "\n",
-    "            breakpoint()\n",
+    "            # breakpoint()\n",
     "            loss = loss_fn(y_pred, y)\n",
     "            epoch_loss += loss.item()\n",
     "            metrics.fill_metrics(y_pred, y)\n",
